# C2-proxy

./: .gitignore  command.py
agent/: CMakeLists.txt  Makefile  agent  implant.cpp  implant.h  main.cpp
agent/include/: implant.h  net_message.h  tasks.h
agent/src/: implant.cpp  main.cpp  results.cpp  tasks.cpp
api/: agents.py  history.py  results.py  tasks.py
database/: db.py  models.py
server/: agents.py  command.py  response_handler.py  task_handler.py
server/database/: db.py
server/utils/: message_types.py
